# ChangeLog for app-shells/prll
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/prll/ChangeLog,v 1.9 2011/05/22 13:40:15 jlec Exp $

  22 May 2011; Justin Lecher <jlec@gentoo.org> prll-0.6.ebuild:
  Removed unnessacerry DEP and correct DESCRIPTION, #368347

*prll-0.6 (20 May 2011)

  20 May 2011; Justin Lecher <jlec@gentoo.org> +prll-0.6.ebuild:
  Version Bump

  11 Jan 2011; Markus Meier <maekke@gentoo.org> prll-0.5.ebuild:
  x86 stable, bug #350712

  05 Jan 2011; Markos Chandras <hwoarang@gentoo.org> prll-0.5.ebuild:
  Stable on amd64 wrt bug #350712

  05 Jan 2011; Justin Lecher <jlec@gentoo.org> -files/0.4-ldflags.patch,
  -files/0.4-prefix.patch, -prll-0.4.ebuild:
  Some Clean up

*prll-0.5 (18 May 2010)

  18 May 2010; Justin Lecher <jlec@gentoo.org> +files/0.5-prefix.patch,
  +prll-0.5.ebuild:
  Version Bump, #319833, thanks Jure Varlec for the patches

  01 Mar 2010; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Added to shell-tools herd

*prll-0.4 (26 Feb 2010)

  26 Feb 2010; Justin Lecher <jlec@gentoo.org>
  +files/0.4-ldflags.patch, +files/0.4-prefix.patch, +prll-0.4.ebuild,
  +metadata.xml:
  Imported from sunrise, Thanks Jure Varlec for inial ebuild, #299798.
