@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX 0.5-prefix.patch 957 RMD160 ab5af2be2217b25656921e0852588a7e132f7aea SHA1 ce8949ed7f280412b21889cadf7189247ba31272 SHA256 0d79aedc8b93eaeb96cc8a86b8aed8dd712a65d3e9bd5148755d27b41854cc74
 DIST prll-0.5.tar.bz2 38669 RMD160 4977c499d6a59565c1a3314b52521e93a6cc1b0e SHA1 ed2aac99f3a63baf06e23ca1f60ebe270b36251b SHA256 4b228e31b5309b435380ef7aaa7fb594572a904064c7fc8694ee46d7daeaeea3
 DIST prll-0.6.tar.bz2 35881 RMD160 63c06a358c4f7a3466cbaa0f1583ef9405bc4c0b SHA1 58bb4e82a853d1cdf66c5566dbb935d3a4de2313 SHA256 a13930cba906a60b2171f6b18915ecededfbfbf8473e2dccaa4172ea10294d31
 EBUILD prll-0.5.ebuild 735 RMD160 a9bc704aa4572f1332cbb0d4d2b6403ca829fb90 SHA1 175df9609614e8dc084d59773548d57fb883cb7f SHA256 8f1ceeaf134b204cfb808c340fed71e42ce40d5433fd5356b6d9cd19c06370a2
-EBUILD prll-0.6.ebuild 659 RMD160 5bc0758c7cf71989d958ee4080fa8fb40b48d723 SHA1 0e5791082e5a8e14e1d0519810e35d83dadc0978 SHA256 b8f6d4ab58286024033e0e51a1ef1abfa015cb4d4a0cd86b4e7819f2fc985fa9
-MISC ChangeLog 1264 RMD160 ba409ec591c39d15a775f469923ca945fbdf7d41 SHA1 04ede29bce4a4bb018fbe03369b857132eb6d2cc SHA256 ee92f47efa6a794eeafde5617c7d66e2236b6b6e13cca704b55bdb803f7537ba
-MISC metadata.xml 224 RMD160 97baeae842c9845f0949b41c4e27dd19d499a884 SHA1 11a08f4f25f3d9304257fa31cca5dd98839956b5 SHA256 fdb5b611290106748c5b3dac723a9366be721ad5390099de8ea601dc6fc0cd5f
+EBUILD prll-0.6.ebuild 756 RMD160 2309ba55beacf1a11fe523d273fa491d300eb42c SHA1 131654dc3ccf6cac14194a166e4b7b1469dd1333 SHA256 549d7ca61aeb0099623721729d013b64ba5c3609de1fb3823b1766ab2b9324e0
+MISC ChangeLog 1400 RMD160 c34acbb6b282adc26629dc0105e06b1354844255 SHA1 d2f5647a1cef87b1fff0e780fd8a489784a20f4c SHA256 1e910c98889c2f16988f6d7ca7a60b7f68b11f95397027d2c1eecec7cbe98601
+MISC metadata.xml 227 RMD160 21da5c101f2efd7c69f05bcbb8ae47a42b0f6328 SHA1 8e9cd0effe2bcd235e509b138a56dc4b86b233c1 SHA256 edf67d24b350b9ba5a2dac0cdb1a0f3f3eab847a84a116ad84c0016e54d1624e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3ZEkUACgkQgAnW8HDreRbTnwCfY/IxbdjZ6UIW7haDNOF+hBZs
-X5wAoMU24QYQBr3WFuYYbJvi3Hn9v2Va
-=0NHw
+iEYEAREKAAYFAk5H2/wACgkQgAnW8HDreRaN0wCdHLCdHgcHAGTpWNkm+0jIf1qU
+lZ4An3rRLxoO3r7hLrOppA6zk3nm9z/y
+=6N/n
 -----END PGP SIGNATURE-----
