@@ -2,7 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>shell-tools</herd>
-<maintainer>
-	<email>jlec@gentoo.org</email>
-</maintainer>
+	<maintainer>
+		<email>jlec@gentoo.org</email>
+	</maintainer>
 </pkgmetadata>
